added full CRUD for serialized parts and sucessfully tested in postman updated swagger docs to include all tested serialized parts routes
