# app/__init__.py
@@ -6,6 +6,7 @@ from app.blueprints.mechanics import mechanics_bp
 from app.blueprints.service_tickets import service_tickets_bp
 from flask_swagger_ui import get_swaggerui_blueprint
 from app.blueprints.part_descriptions import part_descriptions_bp
+from app.blueprints.serialized_parts import serialized_parts_bp
 
 SWAGGER_URL = '/api/docs' # sets endpoint for docs
 API_URL = '/static/swagger.yaml' # grabs the host url from swagger file
@@ -38,5 +39,6 @@ def create_app(config_name):
     app.register_blueprint(service_tickets_bp, url_prefix='/service-tickets')
     app.register_blueprint(swagger_bp, url_prefix=SWAGGER_URL)
     app.register_blueprint(part_descriptions_bp, url_prefix='/part-descriptions')
+    app.register_blueprint(serialized_parts_bp, url_prefix='/serialized-parts')
 
     return app
